<resources>
    <string name="app_name">ValidadorDePresenca</string>
    <string name="take_a_picture">take a picture</string>
    <string name="msg_no_camera_avaliable">No camera avaliable</string>
    <string name="msg_camera_permission_denied">No camera avaliable</string>
    <string name="msg_problem_getting_image">Problem getting the image from the camera app</string>
    <string name="image_details">Image details</string>
    <string name="update">Updated:</string>
    <string name="description">Description</string>
    <string name="btn_update">Atualizar</string>
    <string name="btn_exclude">Excluir</string>
    <string name="msg_error_save_photo">Erro ao salvar foto!</string>
    <string name="pattern_datetime">yyyyMMddHHmmss</string>
    <string name="value_new_photo">Nova foto</string>
    <string name="title_details">Details</string>
    <string name="msg_alert_updated_successfully">Atualizado com sucesso!</string>
    <string name="msg_alert_successfully_deleted">Token imagem excluído com sucesso!</string>
</resources>
