<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoTokenDetails">

    <ImageView
        android:id="@+id/imageViewDetail"
        android:layout_width="360dp"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image_details"
        android:maxHeight="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="@+id/imageViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/imageViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="updateDetailsClicked"
        android:text="@string/btn_update"
        app:layout_constraintStart_toStartOf="@+id/imageViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextDescription" />

    <Button
        android:id="@+id/buttonExclude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="excludePhotoTokenClicked"
        android:text="@string/btn_exclude"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDetail"
        app:layout_constraintTop_toTopOf="@+id/buttonUpdate" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDetail"
        app:layout_constraintStart_toStartOf="@+id/imageViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>